[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openwec"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
clap = { version = "4.0.14", features = ["cargo"] }
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.87"
tokio = { version = "1.22.0", features = ["full"] }
roxmltree = "0.15.0"