[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openwec"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.2", features = ["cargo"] }
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.19"
serde_json = "1.0.97"
tokio = { version = "1.35.1", features = ["full"] }
roxmltree = "0.19.0"
