[package]
name = "cli"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "openwec"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.2", features = ["cargo"] }
common = { path = "../common" }
env_logger = "0.11.3"
log = "0.4.19"
serde_json = "1.0.97"
tokio = { version = "1.39.3", features = ["full"] }
roxmltree = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
chrono = { version  = "0.4.26", default-features = false, features = ["clock"] }
strum = { version = "0.26.1", features = ["derive"] }
