[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rusqlite = { version = "0.28.0", features =  ["bundled"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.97"
async-trait = "0.1.68"
tokio-postgres = "0.7"
chrono = { version  = "0.4.26", default-features = false, features = ["clock"] }
encoding_rs = "0.8.32"
deadpool-postgres = "0.10.5"
deadpool-sqlite = "0.5.0"
openssl = "0.10.55"
postgres-openssl = "0.5.0"

[dev-dependencies]
tempfile = "3.6.0"
serial_test = "2.0.0"
