[package]
name = "common"
version = "0.2.1"
edition = "2021"
# Used by cargo-deb
homepage = "https://github.com/cea-sec/openwec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rusqlite = { version = "0.28.0", features =  ["bundled"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
log = "0.4.19"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.97"
async-trait = "0.1.68"
tokio-postgres = "0.7"
chrono = { version  = "0.4.26", default-features = false, features = ["clock"] }
encoding_rs = "0.8.32"
deadpool-postgres = "0.13.0"
deadpool-sqlite = "0.5.0"
openssl = "0.10.60"
postgres-openssl = "0.5.0"
strum = { version = "0.26.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.9.0"
serial_test = "3.0.0"

# cargo-deb
[package.metadata.deb]
name="openwec"
maintainer = "CEA"
copyright = "2023, CEA"
extended-description = """\
An implementation of a Windows Event Collector \
server running on GNU/Linux."""
depends = "$auto, libgssapi-krb5-2"
section = "utility"
priority = "optional"
assets = [
    ["target/release/openwec", "usr/bin/", "755"],
    ["target/release/openwecd", "usr/bin/", "755"],
    ["../openwec.conf.sample.toml", "etc/openwec.conf.toml", "644"],
    ["../openwec.conf.sample.toml", "usr/share/doc/openwec/", "644"],
    ["../README.md", "usr/share/doc/openwec/", "644"],
    ["../doc/*", "usr/share/doc/openwec/doc/", "644"],
]
conf-files = ["/etc/openwec.conf.toml"]
maintainer-scripts = "../build-pkg/debian/"
systemd-units = { unit-name = "openwecd", enable = false }
