[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openwecd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
env_logger = "0.10.0"
anyhow = "1.0.71"
base64 = "0.21.2"
buf-read-ext = "0.4.0"
http = "0.2.9"
httparse = "1.8.0"
hyper = { version = "0.14.26", features = ["full"] }
itoa = "1.0.6"
libgssapi = { version = "0.6.4", features = ["iov"] }
log = "0.4.19"
mime = "0.3.17"
quick-xml = "0.29.0"
roxmltree = "0.18.0"
tokio = { version = "1.28.2", features = ["full"] }
rdkafka = { version = "0.32.2", features = ["zstd", "libz", "external-lz4"] }
regex = "1.8.4"
lazy_static = "1.4.0"
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
async-trait = "0.1.68"
chrono = { version  = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.3.5", features = ["cargo"] }
futures-util = "0.3.28"
xmlparser = "0.13.5"
itertools = "0.11.0"
futures = "0.3.28"
bitreader = "0.3.7"


[dev-dependencies]
hex = "0.4.3"


# cargo-deb
[package.metadata.deb]
name="openwec"
maintainer = "William Bruneau <william.bruneau@cea.fr>"
copyright = "2023, CEA <william.bruneau@cea.fr>"
extended-description = """\
An implementation of a Windows Event Collector\
server running on GNU/Linux."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/openwec", "usr/bin/", "755"],
    ["target/release/openwecd", "usr/bin/", "755"],
    ["../openwec.conf.sample.toml", "etc/openwec.conf.toml", "644"],
    ["../openwec.conf.sample.toml", "usr/share/doc/openwec/", "644"],
    ["../README.md", "usr/share/doc/openwec/", "644"],
    ["../doc/*", "usr/share/doc/openwec/doc/", "644"],
]
conf-files = ["/etc/openwec.conf.toml"]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "openwecd", enable = false }
