[package]
name = "server"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "openwecd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0.71"
base64 = "0.22.0"
buf-read-ext = "0.4.0"
httparse = "1.10.0"
hyper = { version = "1.5.0", features = ["full"] }
itoa = "1.0.6"
libgssapi = { version = "0.7.2", features = ["iov"] }
log = "0.4.19"
mime = "0.3.17"
quick-xml = "0.36.0"
roxmltree = "0.20.0"
tokio = { version = "1.41.0", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["zstd", "libz", "external-lz4", "ssl", "sasl", "gssapi"] }
regex = "1.11.0"
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.97"
async-trait = "0.1.68"
chrono = { version  = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.4.2", features = ["cargo"] }
futures-util = "0.3.28"
xmlparser = "0.13.5"
itertools = "0.14.0"
futures = "0.3.28"
bitreader = "0.3.7"
rustls-pemfile = "2.2.0"
x509-parser = "0.17.0"
sha1 = "0.10.5"
hex = "0.4.3"
redis = { version = "0.25.3", features = ["tokio-comp", "aio"]}
log4rs = "1.2.0"
log-mdc = "0.1.0"
tokio-util = "0.7.10"
thiserror = "2.0.11"
hyper-util = { version = "0.1", features = ["full"] }
socket2 = "0.5.6"
http-body-util = "0.1"
ppp = "2.2.0"
tokio-rustls = "0.26.0"
strum = { version = "0.27.1", features = ["derive"] }
leon = "3.0.1"
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.16.0", features = ["http-listener"] }
url = "2.5.4"
